loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:3: error: illegal start of simple expression
  do ( var c=0
       ^Poucet2:7: error: ')' expected but ';' found.
  forward();) while crossing();
           ^Poucet2:7: error: 'while' expected but ')' found.
  forward();) while crossing();
            ^Poucet2:14: error: '(' expected but '}' found.
} 
^