loopdowhile.Poucet2.scala.code
while ( exitReached==false) {
  forward();
  do ( var c=0
      if (isOverBaggle==true) {
    c= c+1
  }
  forward();) while crossing();
if (c<3) {
  right();
}
else {
  left();
}
}